--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,7 @@
 SUBDIRS=lib src plugins
 
-sysconf_DATA = etc/wallyd.conf etc/wallyd.startup.js etc/wallyd.startup
+sysconf_DATA = etc/wallyd.conf etc/wallyd.startup.js etc/wallyd.d
 
+#
+#install-data-hook:
+#		mkdir -p $(DESTDIR)$(localconfdir)/wallyd.d
