--- a/etc/wallyd.conf
+++ b/etc/wallyd.conf
@@ -21,5 +21,5 @@ foreground=true
 logfile=/tmp/wallyd.log
 
 #   Load plugins from here
-plugins=/usr/lib/wallyd/plugins
-
+plugins=${LIB_INSTALL_DIR}/wallyd
+basedir=${CMAKE_INSTALL_PREFIX}
