--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(wallyd)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(PKG_CONFIG_USE_CMAKE_PREFIX_PATH on)
 
-set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -D__WITH_MURMUR")
+set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -D__WITH_MURMUR -std=gnu99")
 
 find_package(PkgConfig)
 pkg_check_modules(LIBUV libuv>=1.7)
@@ -43,7 +43,7 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -DDARWIN")
 endif()
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux") 
-    set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -DLinux")
+    set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -DLINUX")
 endif()
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows") 
     set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -DWINDOWS")
