--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,8 @@
-set(WALLYD_SRC wallyd.c)
+#set(WALLYD_SRC wallyd.c)
 set(DWALLYD_SRC dwallyd.c duv.c schema.c dukcurl.c)
 set(TEST_SRC drmtest.c)
 
-add_executable(swallyd ${WALLYD_SRC})
+#add_executable(swallyd ${WALLYD_SRC})
 add_executable(dwallyd ${DWALLYD_SRC})
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
   add_executable(drmtest ${TEST_SRC})
@@ -10,7 +10,7 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
   install(TARGETS drmtest DESTINATION ${BIN_INSTALL_DIR})
 endif()
 
-target_link_libraries(swallyd ${LIBUV_LIBRARIES} ${LIBSDL_LIBRARIES} wallyd)
+#target_link_libraries(swallyd ${LIBUV_LIBRARIES} ${LIBSDL_LIBRARIES} wallyd)
 target_link_libraries(dwallyd ${LIBUV_LIBRARIES} ${LIBSDL_LIBRARIES} wallyd)
 
-install(TARGETS swallyd dwallyd DESTINATION ${BIN_INSTALL_DIR})
+install(TARGETS dwallyd DESTINATION ${BIN_INSTALL_DIR})
