add drmtest dependencies

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,8 +5,12 @@ set(TEST_SRC drmtest.c)
 #add_executable(swallyd ${WALLYD_SRC})
 add_executable(dwallyd ${DWALLYD_SRC})
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+  pkg_check_modules(LIBDRI libdri)
+  pkg_check_modules(LIBGLES2 libglesv2)
+  pkg_check_modules(LIBGBM libgbm)
   add_executable(drmtest ${TEST_SRC})
-  target_link_libraries(drmtest EGL GLESv2 gbm)
+  target_link_libraries(drmtest EGL GLESv2 gbm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
+  include_directories(${LIBDRI_INCLUDE_DIRS} ${LIBGLES2_INCLUDE_DIRS} ${LIBGBM_INCLUDE_DIRS})
   install(TARGETS drmtest DESTINATION ${BIN_INSTALL_DIR})
 endif()
 
