make dukluv/duv cmake compatible, make SDL2 cmake compatible

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ set(TEST_SRC drmtest.c)
 #add_executable(swallyd ${WALLYD_SRC})
 add_executable(dwallyd ${DWALLYD_SRC})
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+  pkg_check_modules(LIBDRM libdrm)
   pkg_check_modules(LIBDRI libdri)
   pkg_check_modules(LIBGLES2 libglesv2)
   pkg_check_modules(LIBGBM libgbm)
@@ -14,7 +15,7 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 #  add_executable(kms-pageflip kms-pageflip.c)
   target_link_libraries(kmscube EGL GLESv2 gbm m kms cairo drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
   target_link_libraries(drmtest EGL GLESv2 gbm drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
-  include_directories(${LIBDRI_INCLUDE_DIRS} ${LIBGLES2_INCLUDE_DIRS} ${LIBGBM_INCLUDE_DIRS})
+  include_directories(${LIBDRI_INCLUDE_DIRS} ${LIBGLES2_INCLUDE_DIRS} ${LIBGBM_INCLUDE_DIRS} ${LIBDRM_INCLUDE_DIRS})
   install(TARGETS drmtest DESTINATION ${BIN_INSTALL_DIR})
   install(TARGETS kmscube DESTINATION ${BIN_INSTALL_DIR})
 endif()
