--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,11 +19,12 @@ pkg_check_modules(LIBAVCODEC libavcodec)
 pkg_check_modules(LIBAVFORMAT libavformat)
 pkg_check_modules(LIBSWSCALE libswscale)
 pkg_check_modules(LIBCURL libcurl)
+pkg_check_modules(LIBDUV dukluv)
 
 #target_link_libraries(wallyd ${LIBUV_LIBS} ${LIBSDL_LIBRARIES} 
 #    ${LIBCURL_LIBRARIES} ${LIBSDLTTF_LIBRARIES} ${LIBSDLIMG_LIBRARIES} duktape duv)
-include_directories(${LIBUV_INCLUDE_DIRS} ${LIBSDL_INCLUDE_DIRS} lib src /usr/local/include)
-link_directories(${LIBUV_LIBRARY_DIRS} ${LIBSDL_LIBRARY_DIRS} /usr/local/lib)
+include_directories(${LIBUV_INCLUDE_DIRS} ${LIBSDL_INCLUDE_DIRS} ${LIBDUV_INCLUDE_DIRS} lib src)
+link_directories(${LIBUV_LIBRARY_DIRS} ${LIBSDL_LIBRARY_DIRS})
 
 # TODO
 #file (STRINGS "version" CMAKE_BUILD_NUMBER)
