add signal handler for clean kmscube quit

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,3 +1,5 @@
+project(libwallyd)
+
 set(LIB_SRC jsmn.c buf.c json.c util.c
     parseJson.c plugins.c hashtable.c
     connect.c sys.c memfs.c murmur.c
