add modeset example for linux builds

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,11 +13,14 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Linuxx")
   add_executable(drmtest ${TEST_SRC})
   add_executable(kmscube kmscube.c esTransform.c)
 #  add_executable(kms-pageflip kms-pageflip.c)
+  add_executable(modeset modeset.c)
   target_link_libraries(kmscube EGL GLESv2 gbm m kms cairo drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
+  target_link_libraries(modeset EGL GLESv2 gbm m kms cairo drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
   target_link_libraries(drmtest EGL GLESv2 gbm drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
   include_directories(${LIBDRI_INCLUDE_DIRS} ${LIBGLES2_INCLUDE_DIRS} ${LIBGBM_INCLUDE_DIRS} ${LIBDRM_INCLUDE_DIRS})
   install(TARGETS drmtest DESTINATION ${BIN_INSTALL_DIR})
   install(TARGETS kmscube DESTINATION ${BIN_INSTALL_DIR})
+  install(TARGETS modeset DESTINATION ${BIN_INSTALL_DIR})
 endif()
 
 #target_link_libraries(swallyd ${LIBUV_LIBRARIES} ${LIBSDL_LIBRARIES} wallyd)
