--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,6 @@
-#set(WALLYD_SRC wallyd.c)
-set(DWALLYD_SRC dwallyd.c duv.c schema.c dukcurl.c)
 set(TEST_SRC drmtest.c)
 
-#add_executable(swallyd ${WALLYD_SRC})
-add_executable(dwallyd ${DWALLYD_SRC})
+# On Linux build some KMS / DRM Test programms
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linuxx")
   pkg_check_modules(LIBDRM libdrm)
   pkg_check_modules(LIBDRI libdri)
@@ -23,7 +20,16 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Linuxx")
   install(TARGETS modeset DESTINATION ${BIN_INSTALL_DIR})
 endif()
 
-#target_link_libraries(swallyd ${LIBUV_LIBRARIES} ${LIBSDL_LIBRARIES} wallyd)
-target_link_libraries(dwallyd ${LIBUV_LIBRARIES} ${LIBSDL_LIBRARIES} wallyd)
+
+if(WITH_SEADUK STREQUAL on)
+	set(DWALLYD_SRC dwallyd.c nucly/env.c nucly/path.c seaduk.c ../lib/miniz.c)
+	add_executable(dwallyd ${DWALLYD_SRC})
+	target_link_libraries(dwallyd ${LIBUV_LIBRARIES} ${LIBSDL_LIBRARIES} wallyd seaduk)
+else()
+	set(DWALLYD_SRC dwallyd.c duv.c schema.c dukcurl.c)
+	add_executable(dwallyd ${DWALLYD_SRC})
+	target_link_libraries(dwallyd ${LIBUV_LIBRARIES} ${LIBSDL_LIBRARIES} wallyd)
+endif()
 
 install(TARGETS dwallyd DESTINATION ${BIN_INSTALL_DIR})
+
