--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -20,12 +20,16 @@ add_library(watchdog MODULE watchdog.c)
 add_library(gpio MODULE gpio.c)
 add_library(client MODULE register.c persist.c client.c)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Iplugins/ffplay -I./ffplay/include -DWALLY_PLUGIN ${LIBSWSCALE_CFLAGS}")
-add_library(sdlffvideo MODULE sdlffvideo.c ffplay/cmdutils.c ffplay/postprocess.c ffplay/ffplay.c)
+if(WITH_VIDEO STREQUAL on)
+	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Iplugins/ffplay -I./ffplay/include -DWALLY_PLUGIN ${LIBSWSCALE_CFLAGS}")
+	add_library(sdlffvideo MODULE sdlffvideo.c ffplay/cmdutils.c ffplay/postprocess.c ffplay/ffplay.c)
+	target_link_libraries(sdlffvideo ${LIBSWSCALE_LIBRARIES} ${LIBSWRE_LIBRARIES} 
+	    ${LIBAVUTIL_LIBRARIES} ${LIBAVCODEC_LIBRARIES} ${LIBAVFORMAT_LIBRARIES} ${LIBSDL_LIBRARIES})
+	install(TARGETS sdlffvideo DESTINATION ${LIB_INSTALL_DIR}/wallyd)
+endif()
+
 target_link_libraries(sdlgui ${LIBSDL_LIBRARIES} ${LIBSDLTTF_LIBRARIES} ${LIBSDLIMG_LIBRARIES})
 target_link_libraries(svg2image ${LIBSDL_LIBRARIES})
 target_link_libraries(sdlimage ${LIBSDL_LIBRARIES} ${LIBSDLTTF_LIBRARIES} ${LIBSDLIMG_LIBRARIES} SDL2_gfx)
-target_link_libraries(sdlffvideo ${LIBSWSCALE_LIBRARIES} ${LIBSWRE_LIBRARIES} 
-    ${LIBAVUTIL_LIBRARIES} ${LIBAVCODEC_LIBRARIES} ${LIBAVFORMAT_LIBRARIES} ${LIBSDL_LIBRARIES})
 
-install(TARGETS myPlugin texture sdlimage sdlgui screen js ssdp opencv svg2image watchdog gpio client sdlffvideo DESTINATION ${LIB_INSTALL_DIR}/wallyd)
+install(TARGETS myPlugin texture sdlimage sdlgui screen js ssdp opencv svg2image watchdog gpio client DESTINATION ${LIB_INSTALL_DIR}/wallyd)
