add ssdp.js client running against latest seaduk

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,11 +31,14 @@ if(WITH_VIDEO STREQUAL on)
 	pkg_check_modules(LIBSWSCALE libswscale)
 endif()
 pkg_check_modules(LIBCURL libcurl)
-pkg_check_modules(LIBDUV dukluv)
 
 if(WITH_SEADUK STREQUAL on)
 	set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -DWITH_SEADUK -std=gnu99")
+	pkg_check_modules(LIBDUV seaduk)
+else()
+	pkg_check_modules(LIBDUV dukluv)
 endif()
+
 if(WAIT_EV STREQUAL on)
 	set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -DWAIT_EV")
 endif()
