WIP : remove log message, debug seaduk/duktape

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ set(WITH_SEADUK on)
 # We want to gently wait for events or poll agressivly (more performant)
 set(WAIT_EV on)
 
-set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -D__WITH_MURMUR -std=gnu99")
+set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -D__WITH_MURMUR -std=gnu99 -g")
 
 find_package(PkgConfig)
 pkg_check_modules(LIBUV libuv>=1.7)
