--- a/lib/autoversion.h.in
+++ b/lib/autoversion.h.in
@@ -1,4 +1,4 @@
-#define BUILD_NUMBER "${CMAKE_BUILD_NUMBER}"
+#define BUILD_NUMBER ${CMAKE_BUILD_NUMBER}
 #define INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}"
 #define WALLYD_CONFDIR "${SYSCONFDIR}"
 #define WALLYD_CONFIG "${SYSCONFDIR}/wallyd.conf"
