--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -6,9 +6,9 @@ set(LIB_SRC jsmn.c buf.c json.c util.c
     miniz.c slog.c getrssmem.c ui.c
 )
 
-add_library(wallyd SHARED ${LIB_SRC})
+add_library(libwallyd SHARED ${LIB_SRC})
 
-target_link_libraries(wallyd ${LIBUV_LIBS} ${LIBSDL_LIBRARIES} 
+target_link_libraries(libwallyd ${LIBUV_LIBS} ${LIBSDL_LIBRARIES} 
     ${LIBCURL_LIBRARIES} ${LIBSDLTTF_LIBRARIES} ${LIBSDLIMG_LIBRARIES} ${LIBDUV_LIBRARIES})
 
-install(TARGETS wallyd DESTINATION ${LIB_INSTALL_DIR})
+install(TARGETS libwallyd DESTINATION ${LIB_INSTALL_DIR})
