refactor slog, schema check in sdlgui.c

--- a/etc/wallyd.conf
+++ b/etc/wallyd.conf
@@ -23,3 +23,6 @@ logfile=/tmp/wallyd.log
 #   Load plugins from here
 plugins=${LIB_INSTALL_DIR}/wallyd
 basedir=${CMAKE_INSTALL_PREFIX}
+
+#   slog config
+LOGLEVEL 4
