WIP : prepare for texApps

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ pkg_check_modules(LIBCURL libcurl)
 if(WITH_SEADUK STREQUAL on)
         pkg_check_modules(LIBDUV seaduk)
         string(REPLACE " " "-I" TEMP_DUV_INC "${LIBDUV_INCLUDEDIR}")
-        set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} -lwallyd -L../lib -l${TEMP_DUV_LIBS}")
+	set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} -L./lib -L../lib")
         set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -std=gnu99 -DWITH_SEADUK -I${TEMP_DUV_INC}")
 else()
 	pkg_check_modules(LIBDUV dukluv)
