--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -9,18 +9,18 @@ endif()
 string(REPLACE ";" " -l" TEMP_DUV_LIBS "${LIBDUV_LIBRARIES}")
 set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} -llibwallyd -L../lib -l${TEMP_DUV_LIBS}")
 
-add_library(myPlugin MODULE myPlugin.c)
+#add_library(myPlugin MODULE myPlugin.c)
 add_library(texture MODULE texture.c)
 add_library(sdlimage MODULE sdlimage.c)
 add_library(sdlgui MODULE sdlgui.c)
 add_library(screen MODULE screen.c)
 add_library(js MODULE js.c)
-add_library(ssdp MODULE ssdp.c)
-add_library(opencv MODULE opencv.c)
+#add_library(ssdp MODULE ssdp.c)
+#add_library(opencv MODULE opencv.c)
 add_library(svg2image MODULE svg2image.c)
-add_library(watchdog MODULE watchdog.c)
-add_library(gpio MODULE gpio.c)
-add_library(client MODULE register.c persist.c client.c)
+#add_library(watchdog MODULE watchdog.c)
+#add_library(gpio MODULE gpio.c)
+#add_library(client MODULE register.c persist.c client.c)
 
 if(WITH_VIDEO STREQUAL on)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Iplugins/ffplay -I./ffplay/include -DWALLY_PLUGIN ${LIBSWSCALE_CFLAGS}")
@@ -34,4 +34,4 @@ target_link_libraries(sdlgui ${LIBSDL_LIBRARIES} ${LIBSDLTTF_LIBRARIES} ${LIBSDL
 target_link_libraries(svg2image ${LIBSDL_LIBRARIES} ${LIBDUV_LIBRARIES})
 target_link_libraries(sdlimage ${LIBSDL_LIBRARIES} ${LIBSDLTTF_LIBRARIES} ${LIBSDLIMG_LIBRARIES} ${LIBDUV_LIBRARIES} SDL2_gfx)
 
-install(TARGETS myPlugin texture sdlimage sdlgui screen js ssdp opencv svg2image watchdog gpio client DESTINATION ${LIB_INSTALL_DIR}/wallyd)
+install(TARGETS texture sdlimage sdlgui screen js svg2image DESTINATION ${LIB_INSTALL_DIR}/wallyd)
