WIP : fix zero PH bug (done), orphaned video_refresh (open)

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,14 +1,14 @@
-project(libwallyd)
+project(libwally)
 
-set(LIB_SRC jsmn.c buf.c json.c util.c
-    parseJson.c plugins.c hashtable.c
-    connect.c sys.c memfs.c murmur.c
-    miniz.c slog.c getrssmem.c ui.c
+set(LIB_SRC util.c
+    plugins.c hashtable.c
+    sys.c memfs.c murmur.c
+    slog.c getrssmem.c ui.c
 )
 
-add_library(libwallyd SHARED ${LIB_SRC})
+add_library(wally SHARED ${LIB_SRC})
 
-target_link_libraries(libwallyd ${LIBUV_LIBS} ${LIBSDL_LIBRARIES} 
-    ${LIBCURL_LIBRARIES} ${LIBSDLTTF_LIBRARIES} ${LIBSDLIMG_LIBRARIES} ${LIBDUV_LIBRARIES})
+target_link_libraries(wally ${LIBUV_LIBS} ${LIBSDL_LIBRARIES} 
+    ${LIBSDLTTF_LIBRARIES} ${LIBSDLIMG_LIBRARIES} ${LIBDUV_LIBRARIES})
 
-install(TARGETS libwallyd DESTINATION ${LIB_INSTALL_DIR})
+install(TARGETS wally DESTINATION ${LIB_INSTALL_DIR})
