--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,11 +27,11 @@ target_link_libraries(wallyc)
 if(WITH_SEADUK STREQUAL on)
 	set(DWALLYD_SRC wallyd.c nucly/env.c nucly/path.c seaduk.c ../lib/miniz.c)
 	add_executable(wallyd ${DWALLYD_SRC})
-	target_link_libraries(wallyd ${LIBUV_LIBRARIES} ${LIBSDL_LIBRARIES} libwallyd seaduk)
+	target_link_libraries(wallyd ${LIBUV_LIBRARIES} ${LIBSDL_LIBRARIES} wally seaduk)
 else()
 	set(DWALLYD_SRC wallyd.c duv.c schema.c dukcurl.c)
 	add_executable(wallyd ${DWALLYD_SRC})
-	target_link_libraries(wallyd ${LIBUV_LIBRARIES} ${LIBSDL_LIBRARIES} libwallyd)
+	target_link_libraries(wallyd ${LIBUV_LIBRARIES} ${LIBSDL_LIBRARIES} wally)
 endif()
 
 install(TARGETS wallyd DESTINATION ${BIN_INSTALL_DIR})
