--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ endif()
 if(WITH_SEADUK STREQUAL on)
         pkg_check_modules(LIBDUV seaduk)
         string(REPLACE " " "-I" TEMP_DUV_INC "${LIBDUV_INCLUDEDIR}")
-	set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} -L./lib -L../lib")
+	set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} -L./lib -L../lib -lwallyd")
         set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -std=gnu99 -DWITH_SEADUK -I${TEMP_DUV_INC}")
 else()
 	pkg_check_modules(LIBDUV dukluv)
