switch to manualy wally function pushing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ set(WITH_SEADUK on)
 # We want to gently wait for events or poll agressivly (more performant)
 set(WAIT_EV off)
 
-set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -D__WITH_MURMUR -std=gnu99 -g")
+set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -D__WITH_MURMUR -std=c99 -g")
 
 find_package(PkgConfig)
 pkg_check_modules(LIBUV libuv>=1.7)
@@ -33,8 +33,9 @@ endif()
 
 if(WITH_SEADUK STREQUAL on)
         pkg_check_modules(LIBDUV seaduk)
+	set(TEMP_DUV_INC ".")
         string(REPLACE " " "-I" TEMP_DUV_INC "${LIBDUV_INCLUDEDIR}")
-	set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} -L./lib -L../lib -lwallyd")
+	set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} -L./lib -L../lib -lwally")
         set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -std=gnu99 -DWITH_SEADUK -I${TEMP_DUV_INC}")
 else()
 	pkg_check_modules(LIBDUV dukluv)
