WIP : add sdldemo for KMS debug testing, fix demo.js

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,6 +24,10 @@ set(WALLYC_SRC wallyc.cpp tcp.cpp)
 add_executable(wallyc ${WALLYC_SRC})
 target_link_libraries(wallyc)
 
+set(SDLDEMO sdldemo.c)
+add_executable(sdldemo ${SDLDEMO})
+target_link_libraries(sdldemo ${LIBSDL_LIBRARIES} ${LIBSDLIMG_LIBRARIES})
+
 if(WITH_SEADUK STREQUAL on)
 	set(DWALLYD_SRC wallyd.c nucly/env.c nucly/path.c seaduk.c ../lib/miniz.c)
 	add_executable(wallyd ${DWALLYD_SRC})
