add fb2png for sdl debug

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,7 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Linuxx")
   add_executable(kmscube kmscube.c esTransform.c)
 #  add_executable(kms-pageflip kms-pageflip.c)
   add_executable(modeset modeset.c)
+  add_executable(fb2png fb2png.c)
   target_link_libraries(kmscube EGL GLESv2 gbm m kms cairo drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
   target_link_libraries(modeset EGL GLESv2 gbm m kms cairo drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
   target_link_libraries(drmtest EGL GLESv2 gbm drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
@@ -18,6 +19,7 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Linuxx")
   install(TARGETS drmtest DESTINATION ${BIN_INSTALL_DIR})
   install(TARGETS kmscube DESTINATION ${BIN_INSTALL_DIR})
   install(TARGETS modeset DESTINATION ${BIN_INSTALL_DIR})
+  install(TARGETS fb2png DESTINATION ${BIN_INSTALL_DIR})
 endif()
 
 set(WALLYC_SRC wallyc.cpp tcp.cpp)
