--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,7 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
   pkg_check_modules(LIBDRI libdri)
   pkg_check_modules(LIBGLES2 libglesv2)
   pkg_check_modules(LIBGBM libgbm)
-  set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -L/data/wally/buildroot/output/staging/usr/lib -DMESA_EGL_NO_X11_HEADERS -I/data/wally/buildroot/output/build/libdrm-2.4.68/libkms -I/data/wally/buildroot.x86/output/target/usr/include/cairo/")
+  set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -DMESA_EGL_NO_X11_HEADERS")
   add_executable(drmtest ${TEST_SRC})
   add_executable(kmscube kmscube.c esTransform.c)
 #  add_executable(kms-pageflip kms-pageflip.c)
@@ -15,7 +15,7 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
   target_link_libraries(kmscube EGL GLESv2 gbm m kms cairo drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
   target_link_libraries(modeset EGL GLESv2 gbm m kms cairo drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
   target_link_libraries(drmtest EGL GLESv2 gbm drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
-  target_link_libraries(fb2png ${LIBPNG_LIBRARIES})
+  target_link_libraries(fb2png ${LIBPNG_LIBRARIES} png)
   include_directories(${LIBDRI_INCLUDE_DIRS} ${LIBGLES2_INCLUDE_DIRS} ${LIBGBM_INCLUDE_DIRS} ${LIBDRM_INCLUDE_DIRS} ${LIBPNG_INCLUDE_DIRS})
   install(TARGETS drmtest DESTINATION ${BIN_INSTALL_DIR})
   install(TARGETS kmscube DESTINATION ${BIN_INSTALL_DIR})
