add dukcurl legacy, speed up wallybill demo, clean log

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,8 @@ set(PKG_CONFIG_USE_CMAKE_PREFIX_PATH on)
 # Compile video support (requires libffmpeg)
 set(WITH_VIDEO on)
 
-# We compile agains seaduk ? Otherwise we compile agains dukluv
-set(WITH_SEADUK on)
+# Do we use the clumsy but powerfull curl interface?
+set(WITH_CURL on)
 
 # We want to gently wait for events or poll agressivly (more performant)
 set(WAIT_EV off)
@@ -21,7 +21,12 @@ pkg_check_modules(LIBUV libuv>=1.7)
 pkg_check_modules(LIBSDL sdl2>=2.0)
 pkg_check_modules(LIBSDLTTF SDL2_ttf>=2.0)
 pkg_check_modules(LIBSDLIMG SDL2_image>=2.0)
-#pkg_check_modules(LIBSDLGFX SDL2_gfx>=1.0)
+pkg_check_modules(LIBDUV seaduk)
+set(TEMP_DUV_INC ".")
+string(REPLACE " " "-I" TEMP_DUV_INC "${LIBDUV_INCLUDEDIR}")
+set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} -L./lib -L../lib -lwally")
+set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -std=gnu99 -DWITH_SEADUK -I${TEMP_DUV_INC}")
+
 if(WITH_VIDEO STREQUAL on)
 	set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -DWITH_VIDEO")
 	pkg_check_modules(LIBSWRE libswresample)
@@ -31,14 +36,8 @@ if(WITH_VIDEO STREQUAL on)
 	pkg_check_modules(LIBSWSCALE libswscale)
 endif()
 
-if(WITH_SEADUK STREQUAL on)
-        pkg_check_modules(LIBDUV seaduk)
-	set(TEMP_DUV_INC ".")
-        string(REPLACE " " "-I" TEMP_DUV_INC "${LIBDUV_INCLUDEDIR}")
-	set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} -L./lib -L../lib -lwally")
-        set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -std=gnu99 -DWITH_SEADUK -I${TEMP_DUV_INC}")
-else()
-	pkg_check_modules(LIBDUV dukluv)
+if(WITH_CURL STREQUAL on)
+    pkg_check_modules(LIBCURL libcurl)
 endif()
 
 if(WAIT_EV STREQUAL on)
