remove examples depening on cairo

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,11 +9,10 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
   set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -DMESA_EGL_NO_X11_HEADERS")
   add_executable(drmtest ${TEST_SRC})
   add_executable(kmscube kmscube.c esTransform.c)
-#  add_executable(kms-pageflip kms-pageflip.c)
   add_executable(modeset modeset.c)
   add_executable(fb2png fb2png.c)
-  target_link_libraries(kmscube EGL GLESv2 gbm m kms cairo drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
-  target_link_libraries(modeset EGL GLESv2 gbm m kms cairo drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
+  target_link_libraries(kmscube EGL GLESv2 gbm m kms drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
+  target_link_libraries(modeset EGL GLESv2 gbm m kms drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
   target_link_libraries(drmtest EGL GLESv2 gbm drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
   target_link_libraries(fb2png ${LIBPNG_LIBRARIES} png)
   include_directories(${LIBDRI_INCLUDE_DIRS} ${LIBGLES2_INCLUDE_DIRS} ${LIBGBM_INCLUDE_DIRS} ${LIBDRM_INCLUDE_DIRS} ${LIBPNG_INCLUDE_DIRS})
