cleanup und make compilation warning free

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ pkg_check_modules(LIBSDLIMG SDL2_image>=2.0)
 pkg_check_modules(LIBDUV seaduk)
 set(TEMP_DUV_INC ".")
 string(REPLACE " " "-I" TEMP_DUV_INC "${LIBDUV_INCLUDEDIR}")
-set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} -L./lib -L../lib -lwally")
+set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} -L../lib -lwally")
 set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -std=gnu99 -DWITH_SEADUK -I${TEMP_DUV_INC}")
 
 if(WITH_VIDEO STREQUAL on)
