--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -32,7 +32,7 @@ if(WITH_CURL STREQUAL on)
 endif()
 
 if(WITH_VIDEO STREQUAL on)
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Iplugins/ffplay -I./ffplay/include -DWALLY_PLUGIN ${LIBSWSCALE_CFLAGS} ${LIBAVCODEC_CFLAGS}")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Iplugins/ffplay -I./ffplay/include -DWALLY_PLUGIN ${LIBSWSCALE_CFLAGS}")
     add_library(sdlffvideo MODULE sdlffvideo.c ffplay/cmdutils.c ffplay/postprocess.c ffplay/ffplay.c)
     add_dependencies(sdlffvideo wally)
     target_link_libraries(sdlffvideo ${LIBSWSCALE_LIBRARIES} ${LIBSWRE_LIBRARIES} 
