--- a/etc/wallyd.conf
+++ b/etc/wallyd.conf
@@ -12,10 +12,10 @@ raspberry=false
 #   2 = info
 #   3 = debug
 #   4 = fulldebug
-debug=16384
+debug=16389
 
 #   Run in foreground (otherwise daemonize
-foreground=true
+foreground=false
 
 #   Set a logfile (otherwise stderr)
 logfile=/tmp/wallyd.log
@@ -25,6 +25,6 @@ plugins=${LIB_INSTALL_DIR}/wallyd
 basedir=${CMAKE_INSTALL_PREFIX}
 
 #   slog config
-LOGLEVEL 16384
+LOGLEVEL 16389
 
-#sdldebug=true
+sdldebug=true
