--- a/etc/wallyd.conf
+++ b/etc/wallyd.conf
@@ -15,7 +15,7 @@ raspberry=false
 debug=16387
 
 #   Run in foreground (otherwise daemonize
-foreground=false
+foreground=true
 
 #   Set a logfile (otherwise stderr)
 logfile=/tmp/wallyd.log
