--- a/etc/wallyd.conf
+++ b/etc/wallyd.conf
@@ -14,6 +14,9 @@ raspberry=false
 #   4 = fulldebug
 debug=16389
 
+# disable Audio
+disableAudio=true
+
 #   Run in foreground (otherwise daemonize
 foreground=true
 
