add novsync flag, fix small memory bug

--- a/etc/wallyd.conf
+++ b/etc/wallyd.conf
@@ -20,6 +20,9 @@ disableAudio=true
 #   Run in foreground (otherwise daemonize
 foreground=true
 
+#   disable VSync (set to true for ATI)
+#novsync=true
+
 #   Set a logfile (otherwise stderr)
 logfile=/tmp/wallyd.log
 
