--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,9 +28,11 @@ set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -std=gnu99 -DWITH_SEADUK")
 
 string(REGEX REPLACE "^([0-9]+)\\.([0-9]+).*$" "\\1" DARWIN_MAJOR_VERSION "${CMAKE_SYSTEM_VERSION}")
 string(REGEX REPLACE "^([0-9]+)\\.([0-9]+).*$" "\\2" DARWIN_MINOR_VERSION "${CMAKE_SYSTEM_VERSION}")
-message("OS Version : "${CMAKE_SYSTEM_VERSION})
-if("${DARWIN_MAJOR_VERSION}" LESS 16)
+message("OS Version : " ${CMAKE_SYSTEM_VERSION})
+if(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
+ if("${DARWIN_MAJOR_VERSION}" LESS 16)
     set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -DWITHOUT_CLOCK_GETTIME")
+ endif()
 endif()
 
 
