clean up log system

--- a/etc/wallyd.conf
+++ b/etc/wallyd.conf
@@ -7,12 +7,13 @@
 raspberry=false
 
 #   Debug Level 
-#   0 = erro
-#   1 = warn
-#   2 = info
+#   0 = fatal
+#   1 = erro
+#   2 = warn
+#   3 = info
 #   3 = debug
 #   4 = fulldebug
-debug=16389
+debug=4
 
 # disable Audio
 disableAudio=true
@@ -31,6 +32,6 @@ plugins=${LIB_INSTALL_DIR}/wallyd
 basedir=${CMAKE_INSTALL_PREFIX}
 
 #   slog config
-LOGLEVEL 16389
+LOGLEVEL 4
 
 sdldebug=true
