switch to thread safe HashTable.c

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(libwally)
 
 set(LIB_SRC util.c
-    plugins.c hashtable.c
+    plugins.c Hash_Table.c HNode.c
     sys.c memfs.c murmur.c
     slog.c getrssmem.c ui.c
     pqueue.c
